[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperparameter-tuning-tool"
version = "0.1.0"
description = "CLI for grid, random, and Optuna hyperparameter search on tabular data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "rich>=13.0",
    "optuna>=3.5",
    "optuna-integration[sklearn]>=4.0",
]

[project.scripts]
hpt-tune = "tuner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tuner*"]
